--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-size: 5vh;
     color: #FDF7FF;
     box-sizing: border-box;
+    user-select: none;
 }
 
 body {
@@ -35,28 +36,32 @@ body {
     grid-auto-columns: 1fr;
 }
 
-.calc-grid > * {
+.io, .calc-btn {
     border-radius: 0.2rem;
     width: 100%;
     height: 100%;
 }
 
-button {
+.calc-btn {
     border: none;
     background-color: #150a56;
 }
 
-textarea {
+.brkt {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-areas: "firstBrkt secondBrkt";
+    gap: 0.1rem;
+}
+
+.io {
     border: #150a5611 solid;
     background-color: #40ceca87;
     text-align: right;
     font-size: 0.9rem;
     padding: 0.2rem;
     resize: none;
-}
-
-textarea:focus {
-    outline: none;
 }
 
 @media (max-aspect-ratio: 1/2) {
@@ -72,16 +77,16 @@ textarea:focus {
         background-color: #2d14bd;
     }
 
-    textarea:hover::-webkit-scrollbar-thumb {
+    .io:hover::-webkit-scrollbar-thumb {
         background-color: #150a5699;
     }
 }
 
-textarea::-webkit-scrollbar {
+.io::-webkit-scrollbar {
     width: 0.35rem;
 }
 
-textarea::-webkit-scrollbar-thumb {
+.io::-webkit-scrollbar-thumb {
     background-color: #110b3380;
     border-radius: 1rem;
 }
